2002-05-03  Xing Wang <quixon@gnuchina.org>

	* calendar.c: (CalendarMenu), (close_calendar): Don't NULL
	CalendarDialog when we are only hiding the widget. Fixes
	#80403.

2002-05-01  Glynn Foster  <glynn.foster@sun.com>

	* calendar.c: (CalendarMenu): Oops, forgot to 
	make non-resizable.

2002-05-01  Glynn Foster  <glynn.foster@sun.com>

	* calendar.c: (CalendarMenu): Adapted patch from
	Xing Wang <quixon@gnuchina.org> to fix #77194.

2002-05-01  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-regexp.db: Add fix from 
	 voss@debian.org (Jochen Voss) for #73406.

2002-04-28 Dennis Cranston <dennis_cranston@yahoo.com>

	* about.c:  fix code to correctly find logview.xpm logo
	in the about dialog.  Change name to match application menu.
	Fixes #80109.
	
2002-04-24 Aruna P R <aruna.pou@wipro.com>

	* config.c, info.c, log_repaint.c, logview.c,
	  logview.h, monitor.c, zoom.c:

	Start using Pango wherever we can.

2002-04-18 - John Fleck <jfleck@inkstain.net>

	* help/Makefile.am, help/C/Makefile.am
	gnome-system-log.xml, gnome-system-log-C/omf, legal.xml
	figures/gnome-system-log.png
	incorporating placeholder docs, completing patch from
	Satyajit

2002-04-16  Kevin Vandersloot <kfv101@psu.edu>

        * Makefile.am, logview.c : get help working - almost

2002-03-21 Aruna P R <aruna.pou@wipro.com>

	* logview.c: add session managment to systemlogmoitor

2002-03-30 Aruna P R <aruna.pou@wipro.com>
	
	* actions.c, monitor.c, logview.h:

        Replaced GtkClist and GtkCtree calls with GtkTreeView calls in the files        

2002-03-20  Yogeesh MB <yogeeshappa.mathighatta@wipro.com>

	* logview.c :Removed user preference dialog, Patch #57968

2002-03-26 Aruna P R <aruna.pou@wipro.com>

        * monitor.c: Monitor options gives the messages when tried to add more
        than the MON_MAX_NUM_LOGS(4) log files.
        Fixes the problem with Add and Remove button

        * logview.c: made menu items and view items sensitive.